fixed issue horizontal scrolling by adding overflow-x: hidden;

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -11,6 +11,8 @@ body {
   background-color: #2d2d2d;
   margin-top: 70px;
   text-align: center;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 h1 {
