--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -33,6 +33,8 @@
 }
 body {
   background-color: #2d2d2d;
+  width: 100%;
+  overflow-x: hidden;
 }
 .icons {
   display: flex;
@@ -93,13 +95,12 @@ hr {
   width: 500px;
 }
 
-
 .fa-github,
 .fa-square-phone,
 .fa-envelope,
 .fa-linkedin {
   color: white;
-  font-size: 30px;
+  font-size: 40px;
   display: inline-block;
   margin: 10px;
   text-decoration: none;
@@ -115,4 +116,15 @@ hr {
 
 .nav-item {
   padding: 0 20px;
+}
+.navbar-color {
+  background-color: #c8c8c8;
+  font-family: var(--title-font-family);
+  opacity: 0.8;
+}
+#navbarNav {
+  text-align: left;
+  font-size: 20px;
+  font-weight: 400;
+  font-family: var(--title-font-family);
 }
